--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -27,21 +27,21 @@ http {
     access_log  /var/log/nginx/access.log main;
 
     # --------------- Basic Settings ---------------
-    #sendfile off;
-    #sendfile_max_chunk 512k;
-    #autoindex off;
-    #tcp_nopush off;
-    #tcp_nodelay on;
-    #server_tokens off;
-    #access_log off;
-    #reset_timedout_connection on;
-    #ignore_invalid_headers on;
-    #open_file_cache max=10000 inactive=10m;
-    #open_file_cache_valid 2m;
-    #open_file_cache_min_uses 5;
-    #open_file_cache_errors off;
-    #lingering_time 20;
-	#lingering_timeout 5s;
+    sendfile off;
+    sendfile_max_chunk 512k;
+    autoindex off;
+    tcp_nopush off;
+    tcp_nodelay on;
+    server_tokens off;
+    access_log off;
+    reset_timedout_connection on;
+    ignore_invalid_headers on;
+    open_file_cache max=10000 inactive=10m;
+    open_file_cache_valid 2m;
+    open_file_cache_min_uses 5;
+    open_file_cache_errors off;
+    lingering_time 20;
+    lingering_timeout 5s;
 
     # Brotli support
     #brotli on;
@@ -53,36 +53,36 @@ http {
     #brotli_types text/plain text/xml text/css text/js text/javascrip application/atom+xml application/json application/xhtml+xml application/xml+rss application/x-font-ttf application/x-font-opentypeapplication/vnd.ms-fontobject application/javascript application/x-javascript application/rss+xml application/x-font-truetype application/xml font/tff font/eot font/otf font/opentype font/truetype image/x-icon image/svg+xml image/vnd.microsoft.icon image/x-win-bitmapt;
 
     ## GZip support
-    #gzip on;
-    #gzip_comp_level 8;
-    #gzip_static on;
-    #gzip_disable "msie6";
-    #gzip_vary on;
-    #gzip_proxied any;
-    #gzip_min_length 20;
-    #gzip_buffers 64 8k;
-    #gzip_http_version 1.1;
-    #gzip_types text/plain text/xml text/css text/js text/javascript text/x-javascript text/x-component application/atom+xml application/json application/xhtml+xml application/xml+rss application/x-font-ttf application/x-font-opentype application/vnd.ms-fontobject application/javascript application/x-javascript application/rss+xml application/x-font-truetype application/xml font/tff font/eot font/otf font/opentype font/truetype image/x-icon image/svg+xml image/vnd.microsoft.icon image/x-win-bitmapt;
+    gzip on;
+    gzip_comp_level 8;
+    gzip_static on;
+    gzip_disable "msie6";
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_min_length 20;
+    gzip_buffers 64 8k;
+    gzip_http_version 1.1;
+    gzip_types text/plain text/xml text/css text/js text/javascript text/x-javascript text/x-component application/atom+xml application/json application/xhtml+xml application/xml+rss application/x-font-ttf application/x-font-opentype application/vnd.ms-fontobject application/javascript application/x-javascript application/rss+xml application/x-font-truetype application/xml font/tff font/eot font/otf font/opentype font/truetype image/x-icon image/svg+xml image/vnd.microsoft.icon image/x-win-bitmapt;
     
     ## Buffers configuration
-    #client_body_buffer_size 20m;
-    #client_header_buffer_size 32k;
-    #client_max_body_size 30m;
-    #large_client_header_buffers 16 32k;
-    #fastcgi_buffer_size 512k;
-    #fastcgi_buffers 16 512k;
+    client_body_buffer_size 20m;
+    client_header_buffer_size 32k;
+    client_max_body_size 30m;
+    large_client_header_buffers 16 32k;
+    fastcgi_buffer_size 512k;
+    fastcgi_buffers 16 512k;
 
     ## Timeouts configuration
-    #client_body_timeout 30;
-    #client_header_timeout 30;
-    #keepalive_timeout 65;
-    #keepalive_requests 10000;
-    #keepalive_disable msie6;
-    #connection_pool_size 2048;
-    ##send_timeout 30;
-    #request_pool_size 64k;
-    #postpone_output 0;
-    #types_hash_max_size 2048;
+    client_body_timeout 30;
+    client_header_timeout 30;
+    keepalive_timeout 65;
+    keepalive_requests 10000;
+    keepalive_disable msie6;
+    send_timeout 30;
+    connection_pool_size 2048;
+    request_pool_size 64k;
+    postpone_output 0;
+    types_hash_max_size 2048;
 
     include /etc/nginx/conf.d/*.conf;
 }
