--- a/config/nginx/conf.d/website.conf
+++ b/config/nginx/conf.d/website.conf
@@ -8,7 +8,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name seocrawler.test www.seocrawler.test;
+    server_name elenacarrasco.test www.elenacarrasco.test;
 
     index index.php index.html index.htm;
 
@@ -33,7 +33,7 @@ server {
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php:9000;
+        fastcgi_pass elenacarrasco:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
