Updating readme.md

--- a/config/nginx/conf.d/website.conf
+++ b/config/nginx/conf.d/website.conf
@@ -1,13 +1,9 @@
 server {
     
-    # With varnish (if you use mysql-wordpress-varnish-nginx-local.yml)
-    #listen 8080;
-    #listen [::]:8080;
-    
-    # Without varnish (if you use mysql-wordpress-nginx-local.yml)
     listen 80;
     listen [::]:80;
 
+    # Change server_name according your domain
     server_name elenacarrasco.test www.elenacarrasco.test;
 
     index index.php index.html index.htm;
